--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       
     </style>
 </head>
-<!-- Dinoe J. Slour ID:5272 -->
+<!-- GABRIEL DAKINAH VINCENT ID:6922 -->
 <body style="padding: 0px 30px 0px 30px;">
 <ul>
     <span style="font-size: 30px;padding:25px; color:white;">
