--- a/tips.html
+++ b/tips.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body style="padding: 0px 30px 0px 30px;">
-<!-- Dinoe J. Slour ID:5272 -->
+<!-- Roosevelt J Suah jr ID# @5229 -->
      <ul>
 
             <span style="font-size: 30px;padding:25px; color:white;">
