--- a/getintouch.html
+++ b/getintouch.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="ART277 FINAL ASSIGNMENT ">
-    <meta name="author" content="Dinoe J. Slour">
+    <meta name="author" content="GABRIEL DAKINAH VINCENT">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="refresh" content="30">
     <title>GET IN TOUCH</title>
@@ -11,7 +11,7 @@
 </head>
 
 <body style="padding: 0px 30px 0px 30px;">
-<!-- Dinoe J. Slour ID:5272 -->
+<!-- GABRIEL DAKINAH VINCENT ID:6922 -->
      <ul>
     <span style="font-size: 30px;padding:25px; color:white;">
             Health <abbr style="color:yellow;">Essentials</abbr>
