--- a/Assignment 3.html
+++ b/Assignment 3.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="aa.jpg" style="width:100%; height:300px;">
+    <img src="ab2.jpg" style="width:100%; height:300px;">
     <h3><strong>Travelling in Depression</strong></h3>
     <p>When I was very little, I caught the travel bug. It started after my grandparents first brought me to their home in France and I have now been to twenty-nine different countries. Each has given me a unique learning experience.</p>
     <p>
